[tool.poetry]
name = "ml-experiments"
version = "0.1.0"
description = ""
authors = ["Vlad Precup <vlad.precup@live.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.3.0"
jupyterlab = "^4.0.2"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
transformers = "^4.34.0"
tokenizers = "^0.14.1"
datasets = "^2.14.5"
torch = "^2.1.0"
accelerate = "^0.23.0"
pdfplumber = "^0.10.2"
evaluate = "^0.4.1"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
